Fix flyers display on smaller resolution

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1263,8 +1263,20 @@ Home Page bg
 }
 
 .container-sm {
-	width: 85%;
-	margin: 100px auto 0;
+	width: 100%;
+	margin: 40px auto 0;
+}
+.container-sm > div {
+	margin-bottom: 50px;
+}
+@media (min-width: 64rem) {
+	.container-sm {
+		width: 85%:
+		margin: 100px auto 0;
+	}
+	.container-sm > div {
+		margin-bottom: 0;
+	}
 }
 .digital-flyer {
 	text-align: center;
@@ -1288,9 +1300,14 @@ Home Page bg
 	background: transparent;
 	text-align: center;
 	color: #4a4a4a;
-	padding: 60px 0 0;
+	padding: 30px 0 0;
 	margin: 0;
 	line-height: normal;
+}
+@media (min-width: 64rem) {
+	.digital-flyer .title {
+		padding: 60px 0 0;
+	}
 }
 .digital-flyer span {
 	padding-top: 0;
@@ -1311,7 +1328,12 @@ Home Page bg
 	text-decoration: none;
 	font-size: 17px;
 	border-radius: 3px;
-	width: 50%;
+	width: 70%;
+}
+@media (min-width: 64rem) {
+	.section .digital-flyer .add-to-cart {
+		width: 50%;
+	}
 }
 
 .post {
